Fix card spacing

--- a/stylesheets/general-styling.css
+++ b/stylesheets/general-styling.css
@@ -356,7 +356,7 @@ h4 {
   justify-content: center;
   align-items: center;
   width: 50%;
-  height: 40vw;
+  height: 35vw;
 }
 
 .card {
@@ -621,7 +621,7 @@ h4 {
   }
 
   .card-container {
-    height: 60vw;
+    height: 45vw;
   }
 
   .card {
